--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,6 @@ body {
 	height: 100%;
 	font-family: "Cairo", sans-serif;
 	-webkit-font-smoothing: antialiased;
-	font-smoothing: antialiased;
 }
 
 h1,
@@ -798,7 +797,7 @@ ol {
 	position: absolute;
 	left: -35px;
 	top: 50%;
-	-webkit-transform: translateY(-35px);
+	/* -webkit-transform: translateY(-35px); */
 	background: #ffffff;
 }
 
@@ -2315,43 +2314,11 @@ ol {
 	margin-bottom: 25px;
 }
 
-.blog__item__text .blog__btn {
-	display: inline-block;
-	font-size: 14px;
-	color: #1c1c1c;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	border: 1px solid #b2b2b2;
-	padding: 14px 20px 12px;
-	border-radius: 25px;
-}
-
 .blog__item__text .blog__btn span {
 	position: relative;
 	top: 1px;
 	margin-left: 5px;
 }
-
-.blog__pagination {
-	padding-top: 5px;
-	position: relative;
-}
-
-.blog__pagination:before {
-	position: absolute;
-	left: 0;
-	top: -29px;
-	height: 1px;
-	width: 100%;
-	background: #000000;
-	opacity: 0.1;
-	content: "";
-}
-
-/*---------------------
-  Blog Sidebar
------------------------*/
-
 
 .blog__sidebar__item {
 	margin-bottom: 50px;
@@ -3187,7 +3154,7 @@ ol {
 		position: relative;
 		left: 0;
 		top: 0;
-		-webkit-transform: translateY(0);
+		/* -webkit-transform: translateY(0); */
 	}
 	.categories__slider.owl-carousel .owl-nav button.owl-next {
 		right: -10px;
