Do a little bit Order

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,7 +174,8 @@ ol {
 -----------------------*/
 
 .header__top {
-	background: #f5f5f5;
+	background: #FFA726;
+	color: #FFFFFF;
 }
 
 .header__top__left {
@@ -216,6 +217,8 @@ ol {
 .header__top__right {
 	text-align: right;
 	padding: 10px 0 13px;
+	
+	
 }
 
 .header__top__right__social {
@@ -349,51 +352,11 @@ ol {
 	position: relative;
 }
 
-.header__menu ul li .header__menu__dropdown {
-	position: absolute;
-	left: 0;
-	top: 50px;
-	background: #222222;
-	width: 180px;
-	z-index: 9;
-	padding: 5px 0;
-	-webkit-transition: all, 0.3s;
-	-moz-transition: all, 0.3s;
-	-ms-transition: all, 0.3s;
-	-o-transition: all, 0.3s;
-	transition: all, 0.3s;
-	opacity: 0;
-	visibility: hidden;
-}
-
-.header__menu ul li .header__menu__dropdown li {
-	margin-right: 0;
-	display: block;
-}
-
-.header__menu ul li .header__menu__dropdown li:hover>a {
-	color: #7fad39;
-}
-
-.header__menu ul li .header__menu__dropdown li a {
-	text-transform: capitalize;
-	color: #ffffff;
-	font-weight: 400;
-	padding: 5px 15px;
-}
-
-.header__menu ul li.active a {
-	color: #7fad39;
-}
-
-.header__menu ul li:hover .header__menu__dropdown {
-	top: 30px;
-	opacity: 1;
-	visibility: visible;
-}
-
 .header__menu ul li:hover>a {
-	color: #7fad39;
+	color: #FFA726;
+}
+.header__menu ui li:active{
+	color: #FFA726;
 }
 
 .header__menu ul li:last-child {
@@ -401,11 +364,11 @@ ol {
 }
 
 .header__menu ul li a {
-	font-size: 14px;
+	letter-spacing: 0.5px;
+	font-size: 16px;
 	color: #252525;
 	text-transform: uppercase;
 	font-weight: 700;
-	letter-spacing: 2px;
 	-webkit-transition: all, 0.3s;
 	-moz-transition: all, 0.3s;
 	-ms-transition: all, 0.3s;
@@ -442,6 +405,7 @@ ol {
 
 .header__cart ul li a i {
 	font-size: 18px;
+	padding-left: 3px;
 	color: #1c1c1c;
 }
 
@@ -480,16 +444,9 @@ ol {
 	display: none;
 }
 
-/*---------------------
-  Hero
------------------------*/
-
-.hero {
-	padding-bottom: 50px;
-}
 
 .hero.hero-normal {
-	padding-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .hero.hero-normal .hero__categories {
@@ -511,7 +468,7 @@ ol {
 }
 
 .hero__categories__all {
-	background: #7fad39;
+	background: #FFA726;
 	position: relative;
 	padding: 10px 25px 10px 40px;
 	cursor: pointer;
@@ -523,21 +480,7 @@ ol {
 	margin-right: 10px;
 }
 
-.hero__categories__all span {
-	font-size: 18px;
-	font-weight: 700;
-	color: #ffffff;
-}
 
-.hero__categories__all:after {
-	position: absolute;
-	right: 18px;
-	top: 9px;
-	content: "3";
-	font-family: "ElegantIcons";
-	font-size: 18px;
-	color: #ffffff;
-}
 
 .hero__categories ul {
 	border: 1px solid #ebebeb;
@@ -557,6 +500,10 @@ ol {
 	display: block;
 }
 
+.hero__categories ul li a:hover{
+	color: #FFA726;
+}
+
 .hero__search {
 	overflow: hidden;
 	margin-bottom: 30px;
@@ -564,40 +511,16 @@ ol {
 
 .hero__search__form {
 	width: 610px;
-	border: 1px solid #ebebeb;
+	border: 1px solid #000000;
 	position: relative;
 	float: left;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 
-.hero__search__form form .hero__search__categories {
-	width: 30%;
-	float: left;
-	font-size: 16px;
-	color: #1c1c1c;
-	font-weight: 700;
-	padding-left: 18px;
-	padding-top: 11px;
-	position: relative;
-}
-
-.hero__search__form form .hero__search__categories:after {
-	position: absolute;
-	right: 0;
-	top: 14px;
-	height: 20px;
-	width: 1px;
-	background: #000000;
-	opacity: 0.1;
-	content: "";
-}
-
-.hero__search__form form .hero__search__categories span {
-	position: absolute;
-	right: 14px;
-	top: 14px;
-}
 
 .hero__search__form form input {
+
 	width: 70%;
 	border: none;
 	height: 48px;
@@ -650,6 +573,7 @@ ol {
 }
 
 .hero__item {
+	border-radius: 10px;
 	height: 431px;
 	display: flex;
 	align-items: center;
@@ -682,10 +606,16 @@ ol {
 
 .categories__item {
 	height: 250px;
+	width: 250px;
 	border: 1px solid black;
-	border-radius: 50px;
+	border-radius: 25px;
 	position: relative;
+	/* transition: opacity 0.3s; */
 }
+
+/* .categories__item:hover{
+	opacity: .6;
+} */
 
 .categories__item h5 {
 	position: absolute;
@@ -697,17 +627,23 @@ ol {
 }
 
 .categories__item h5 a {
-	font-size: 18px;
+	font-size: 15px;
 	color: #1c1c1c;
 	font-weight: 700;
 	text-transform: uppercase;
-	letter-spacing: 2px;
+	border-radius: 12px;
+	letter-spacing: 1px;
 	padding: 12px 0 10px;
 	background: #ffffff;
 	display: block;
 }
 
-.categories__slider .col-lg-3 {
+.categories__item h5 a:hover{
+	background-color: #FFA726;
+	color: #FFFFFF;
+}
+
+.categories__slider  {
 	max-width: 100%;
 }
 
@@ -782,12 +718,12 @@ ol {
 	bottom: 20px;
 }
 
-.featured__item__pic {
+/* .featured__item__pic {
 	height: 270px;
 	position: relative;
 	overflow: hidden;
 	background-position: center center;
-}
+} */
 
 .featured__item__pic__hover {
 	position: absolute;
@@ -1249,8 +1185,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #FFA726;
+	border-color: #FFA726;
 }
 
 
@@ -1466,7 +1402,7 @@ ol {
 
 .product__item__pic {
 	border: 0.5px solid black;
-	border-radius: 50px;
+	border-radius: 25px;
 	height: 270px;
 	position: relative;
 	overflow: hidden;
@@ -1496,8 +1432,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #FFA726;
+	border-color: #FFA726;
 }
 
 .product__item__pic__hover li:hover a i {
