--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,16 +94,6 @@ ol {
 	letter-spacing: 2px;
 }
 
-.site-btn {
-	font-size: 14px;
-	color: #ffffff;
-	font-weight: 800;
-	text-transform: uppercase;
-	display: inline-block;
-	padding: 13px 30px 12px;
-	background: #7fad39;
-	border: none;
-}
 
 /* Preloder */
 
@@ -1782,23 +1772,23 @@ ol {
 	width: 15px;
 }
 
-.primary-btn.cart-btn {
+/* .primary-btn.cart-btn {
 	color: #6f6f6f;
 	padding: 14px 30px 12px;
 	background: #f5f5f5;
-}
+} */
 
-.primary-btn.cart-btn span {
+/* .primary-btn.cart-btn span {
 	font-size: 14px;
-}
+} */
 
-.primary-btn.cart-btn.cart-btn-right {
+/* .primary-btn.cart-btn.cart-btn-right {
 	float: right;
-}
+} */
 
-.shoping__discount {
+/* .shoping__discount {
 	margin-top: 45px;
-}
+} */
 
 .shoping__discount h5 {
 	font-size: 20px;
@@ -1879,8 +1869,8 @@ ol {
 -----------------------*/
 
 .checkout {
-	padding-top: 80px;
-	padding-bottom: 60px;
+	padding-top: 20px;
+	padding-bottom: 40px;
 }
 
 .checkout h6 {
@@ -1919,9 +1909,9 @@ ol {
 	margin-bottom: 24px;
 }
 
-.checkout__input p {
+.checkout__input label {
 	color: #1c1c1c;
-	margin-bottom: 20px;
+	margin-bottom: 15px;
 }
 
 .checkout__input p span {
@@ -1946,138 +1936,20 @@ ol {
 	color: #b2b2b2;
 }
 
-.checkout__input__checkbox {
-	margin-bottom: 10px;
-}
 
-.checkout__input__checkbox label {
-	position: relative;
-	font-size: 16px;
-	color: #1c1c1c;
-	padding-left: 40px;
-	cursor: pointer;
-}
 
-.checkout__input__checkbox label input {
-	position: absolute;
-	visibility: hidden;
-}
 
-.checkout__input__checkbox label input:checked~.checkmark {
-	background: #7fad39;
-	border-color: #7fad39;
-}
 
-.checkout__input__checkbox label input:checked~.checkmark:after {
-	opacity: 1;
-}
 
-.checkout__input__checkbox label .checkmark {
-	position: absolute;
-	left: 0;
-	top: 4px;
-	height: 16px;
-	width: 14px;
-	border: 1px solid #a6a6a6;
-	content: "";
-	border-radius: 4px;
-}
 
-.checkout__input__checkbox label .checkmark:after {
-	position: absolute;
-	left: 1px;
-	top: 1px;
-	width: 10px;
-	height: 8px;
-	border: solid white;
-	border-width: 3px 3px 0px 0px;
-	-webkit-transform: rotate(127deg);
-	-ms-transform: rotate(127deg);
-	transform: rotate(127deg);
-	content: "";
-	opacity: 0;
-}
 
-.checkout__order {
-	background: #f5f5f5;
-	padding: 40px;
-	padding-top: 30px;
-}
 
-.checkout__order h4 {
-	color: #1c1c1c;
-	font-weight: 700;
-	border-bottom: 1px solid #e1e1e1;
-	padding-bottom: 20px;
-	margin-bottom: 20px;
-}
 
-.checkout__order .checkout__order__products {
-	font-size: 18px;
-	color: #1c1c1c;
-	font-weight: 700;
-	margin-bottom: 10px;
-}
 
-.checkout__order .checkout__order__products span {
-	float: right;
-}
 
-.checkout__order ul {
-	margin-bottom: 12px;
-}
 
-.checkout__order ul li {
-	font-size: 16px;
-	color: #6f6f6f;
-	line-height: 40px;
-	list-style: none;
-}
 
-.checkout__order ul li span {
-	font-weight: 700;
-	float: right;
-}
 
-.checkout__order .checkout__order__subtotal {
-	font-size: 18px;
-	color: #1c1c1c;
-	font-weight: 700;
-	border-bottom: 1px solid #e1e1e1;
-	border-top: 1px solid #e1e1e1;
-	padding-bottom: 15px;
-	margin-bottom: 15px;
-	padding-top: 15px;
-}
-
-.checkout__order .checkout__order__subtotal span {
-	float: right;
-}
-
-.checkout__order .checkout__input__checkbox label {
-	padding-left: 20px;
-}
-
-.checkout__order .checkout__order__total {
-	font-size: 18px;
-	color: #1c1c1c;
-	font-weight: 700;
-	border-bottom: 1px solid #e1e1e1;
-	padding-bottom: 15px;
-	margin-bottom: 25px;
-}
-
-.checkout__order .checkout__order__total span {
-	float: right;
-	color: #dd2222;
-}
-
-.checkout__order button {
-	font-size: 18px;
-	letter-spacing: 2px;
-	width: 100%;
-	margin-top: 10px;
-}
 
 /*---------------------
   Blog
@@ -3194,10 +3066,10 @@ ol {
 	.shoping__cart__btns {
 		text-align: center;
 	}
-	.primary-btn.cart-btn.cart-btn-right {
+	/* .primary-btn.cart-btn.cart-btn-right {
 		float: none;
 		margin-top: 10px;
-	}
+	} */
 	.shoping__checkout .primary-btn {
 		display: block;
 		text-align: center;
@@ -3214,9 +3086,6 @@ ol {
 
 	.shoping__discount form input {
 		width: 100%;
-	}
-	.checkout__order {
-		padding: 20px;
 	}
 	.blog__details__hero__text h2 {
 		font-size: 24px;
